Changed path for styles and images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="author" content="Alona" />
     <!-- Автор страницы -->
     <title>Hello</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
   </head>
   <body>
     <h1>Antoine de Saint Exupéry - The little prince</h1>
@@ -40,7 +40,7 @@
           the primeval forest. It was a picture of a boa constrictor in the act
           of swallowing an animal. Here is a copy of the drawing.
         </p>
-        <img src="img/chapter-1/hroznys.jpg" alt="" />
+        <img src="src/img/chapter-1/hroznys.jpg" alt="" />
         <p>
           In the book it said:
           <span class="italics"
@@ -54,7 +54,7 @@
           some work with a colored pencil I succeeded in making my first
           drawing. My Drawing Number One. It looked something like this:
         </p>
-        <img src="img/chapter-1/klobouk.jpg" alt="" />
+        <img src="src/img/chapter-1/klobouk.jpg" alt="" />
         <p>
           I showed my masterpiece to the grown-ups, and asked them whether the
           drawing frightened them.
@@ -73,7 +73,7 @@
           always need to have things explained. My Drawing Number Two looked
           like this:
         </p>
-        <img src="img/chapter-1/slon.jpg" alt="" />
+        <img src="srcimg/chapter-1/slon.jpg" alt="" />
         <p>
           The grown-ups' response, this time, was to advise me to lay aside my
           drawings of boa constrictors, whether from the inside or the outside,
@@ -153,7 +153,7 @@
           may see the best portrait that, later, I was able to make of him. But
           my drawing is certainly very much less charming than its model.
         </p>
-        <img src="img/chapter-2/malyPrinc.jpg" alt="" />
+        <img src="src/img/chapter-2/malyPrinc.jpg" alt="" />
         <p>
           That, however, is not my fault. The grown-ups discouraged me in my
           painter's career when I was six years old, and I never learned to draw
@@ -208,7 +208,7 @@
           <br />
           So then I made a drawing.
         </p>
-        <img src="img/chapter-2/nemocnyBeranek.jpg" alt="" />
+        <img src="src/img/chapter-2/nemocnyBeranek.jpg" alt="" />
         <p>
           He looked at it carefully, then he said:
           <br />
@@ -220,7 +220,7 @@
           <br />
           So I made another drawing.
         </p>
-        <img src="img/chapter-2/Beran.jpg" alt="" />
+        <img src="src/img/chapter-2/Beran.jpg" alt="" />
         <p>
           My friend smiled gently and indulgently.
           <br />
@@ -241,12 +241,12 @@
             "This one is too old. I want a sheep that will live a long time."
           </span>
         </p>
-        <img src="img/chapter-2/staryBeranek.jpg" alt="" />
+        <img src="src/img/chapter-2/staryBeranek.jpg" alt="" />
         <p>
           By this time my patience was exhausted, because I was in a hurry to
           start taking my engine apart. So I tossed off this drawing.
         </p>
-        <img src="img/chapter-2/krabice.jpg" alt="" />
+        <img src="src/img/chapter-2/krabice.jpg" alt="" />
         <p>
           And I threw out an explanation with it.
           <br />
